--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth0/nextjs-auth0": "^4.5.0",
     "@tanstack/react-query": "^5.74.7",
     "frontendquimera": "file:",
+    "lucide-react": "^0.263.1",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
