--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@tanstack/react-query": "^5.74.7",
     "frontendquimera": "file:",
     "lucide-react": "^0.263.1",
-    "next": "15.3.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "next": "^15.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
