--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^4.5.0",
     "@tanstack/react-query": "^5.74.7",
+    "buffer": "^6.0.3",
     "frontendquimera": "file:",
     "lucide-react": "^0.263.1",
     "next": "^15.3.1",
