--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "^15.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "resend": "^4.5.1",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
